tests/NormalTests/paczka1/fuzzy1/47671403.err
Error in line 20: g13lmBvykRD A832 88,3
Error in line 11: 4y0lh S453 11,9
Error in line 39: 4zld4e0mBfD A832 7,94
Error in line 19: 4zld4e0mBfD S90 177,5
